unpackaged/main/default/objects/LH__Lookup_Helper_Record_Creation__c/LH__Lookup_Helper_Record_Creation__c.object-meta.xml
<CustomObject>
    <label>Lookup Helper Record Creation</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lookup Helper Record Creations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>