unpackaged/main/default/objects/LH__Lookup_Helper_Record_Creation__c/fields/LH__Lookup_Helper_Setting__c.field-meta.xml
<CustomField>
    <fullName>LH__Lookup_Helper_Setting__c</fullName>
    <label>Lookup Helper Setting</label>
    <referenceTo>LH__Lookup_Helper_Setting__c</referenceTo>
    <relationshipLabel>Lookup Helper Record Creations</relationshipLabel>
    <relationshipName>Lookup_Helper_Record_Creations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>