unpackaged/main/default/objects/LH__Lookup_Helper_Record_Creation__c/fields/LH__Record_Count__c.field-meta.xml
<CustomField>
    <fullName>LH__Record_Count__c</fullName>
    <label>Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>