unpackaged/main/default/objects/LH__Lookup_Helper_Record_Creation__c/fields/LH__Record_Created__c.field-meta.xml
<CustomField>
    <fullName>LH__Record_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Record Created</label>
    <type>Checkbox</type>
</CustomField>