unpackaged/main/default/objects/LH__Lookup_Helper_Record_Creation__c/fields/LH__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>LH__Record_Id__c</fullName>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>